# charis

./: .gitignore  CMakeLists.txt  README.md
cmake/: add_resources.cmake
examples/: CMakeLists.txt
examples/gl-matrix/: CMakeLists.txt  main.cpp
src/fort/: CMakeLists.txt
src/fort/gl/: CMakeLists.txt  FontAtlas.cpp  FontAtlas.hpp  RectanglePacker.cpp  RectanglePackerTest.cpp  Shader.cpp  Shader.hpp  TextRenderer.cpp  TextRenderer.hpp  VAOPool.cpp  VAOPool.hpp  Window.cpp  Window.hpp
src/fort/gl/shaders/: background.fragment  text.fragment  text.vertex
src/fort/options/: CMakeLists.txt  Options.hpp  OptionsTest.cpp  pyproject.toml  tests.hpp
src/fort/options/details/: ArgsLexer.hpp  ArgsLexerTest.cpp  Designator.hpp  DesignatorTest.cpp  DurationTest.hpp  Option.hpp  OptionTest.cpp  Optionable.cpp  Optionable.hpp  OptionableTest.cpp  Traits.hpp  TraitsTest.cpp  config.hpp
src/fort/options/examples/: flat.hpp  nested.hpp
src/fort/options/fort_charis_options/: source_parser.py  test_generate_template.py  test_parse_source.py  test_structure_parser.py
src/fort/options/python/: pyproject.toml
src/fort/options/python/src/fort_charis_options/: __init__.py  source_parser.py
src/fort/options/python/tests/: test_generate_template.py  test_parse_source.py
src/fort/time/: CMakeLists.txt  Time.cpp  Time.hpp  TimeTest.cpp  version.hpp.in
src/fort/utils/: CMakeLists.txt  Defer.hpp  DeferTest.cpp  LRUCache.hpp  LRUCacheTest.cpp  ObjectPool.hpp  ObjectPoolTest.cpp  Once.cpp  Once.hpp  OnceTest.cpp
src/fort/video/: CMakeLists.txt  Encoder.cpp  Encoder.hpp  Frame.cpp  Frame.hpp  PNG.cpp  PNG.hpp  PNGTest.cpp  Reader.cpp  Reader.hpp  ReaderTest.cpp  Types.hpp  TypesIO.hpp  Writer.cpp  Writer.hpp  WriterTest.cpp
src/fort/video/details/: #AVError.hpp#  AVCall.hpp  AVCallTest.cpp  AVTypes.hpp  FunctionName.hpp  SPNGCall.hpp  SPNGCallTest.cpp
src/gl/: CMakeLists.txt  Defer.hpp  FontAtlas.cpp  FontAtlas.hpp  RectanglePacker.hpp  RectanglePackerTest.cpp  RectanglePackerTest.hpp  Shader.cpp  Shader.hpp  TextRenderer.cpp  TextRenderer.hpp  VAOPool.cpp  VAOPool.hpp  Window.hpp  rai.cpp
src/gl/shaders/: text.fragment
