[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fort-charis-options"
version = "0.0.1"
authors = [
  { name="Alexandre Tuleu", email="alexandre.tuleu.2005@polytechnique.org" },
]
description = "C++ Options generator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "libclang",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/formicidae-tracker/charis/src/fort/options"
Issues = "https://github.com/formicidae-tracker/charis/"